--- a/DSP/EventosApp/packages.config
+++ b/DSP/EventosApp/packages.config
@@ -5,5 +5,6 @@
   <package id="AngularJS.Resource" version="1.2.10" targetFramework="net45" />
   <package id="AngularJS.Route" version="1.2.10" targetFramework="net45" />
   <package id="AngularJS.Sanitize" version="1.2.10" targetFramework="net45" />
+  <package id="bootstrap" version="3.2.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
 </packages>
