--- a/DSP/EventosApp/packages.config
+++ b/DSP/EventosApp/packages.config
@@ -6,5 +6,7 @@
   <package id="AngularJS.Route" version="1.2.10" targetFramework="net45" />
   <package id="AngularJS.Sanitize" version="1.2.10" targetFramework="net45" />
   <package id="bootstrap" version="3.2.0" targetFramework="net45" />
+  <package id="FontAwesome" version="4.2.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
+  <package id="Moment.js" version="2.8.2" targetFramework="net45" />
 </packages>
