--- a/DSP/EventosApp/EventosApp.csproj
+++ b/DSP/EventosApp/EventosApp.csproj
@@ -47,11 +47,18 @@
   <ItemGroup>
     <None Include="Content\bootstrap-theme.css.map" />
     <None Include="Content\bootstrap.css.map" />
+    <Content Include="App\Services\SharePointDataContextService.js" />
     <Content Include="App\Services\SharePointEventosService.js" />
     <Content Include="App\Views\layout\fullHeader.html" />
     <Content Include="Data\Eventos\Elements.xml" />
     <Content Include="Data\Eventos\EventosInstance\Elements.xml" />
     <Content Include="Data\Eventos\Schema.xml" />
+    <Content Include="Data\Inscritos\Elements.xml" />
+    <Content Include="Data\Inscritos\InscritosInstance\Elements.xml" />
+    <Content Include="Data\Inscritos\Schema.xml" />
+    <Content Include="Features\Feature2\Feature2.Template.xml">
+      <DependentUpon>Feature2.feature</DependentUpon>
+    </Content>
     <Content Include="fonts\fontawesome-webfont.eot" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.woff" />
@@ -64,6 +71,15 @@
     </None>
     <None Include="Data\Eventos\SharePointProjectItem.spdata">
       <SharePointProjectItemId>{c92145a5-7953-4c41-827c-d32129c0f433}</SharePointProjectItemId>
+    </None>
+    <None Include="Data\Inscritos\InscritosInstance\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{f9b7ec3b-41d3-4dcb-a26d-78dd2fe788a6}</SharePointProjectItemId>
+    </None>
+    <None Include="Data\Inscritos\SharePointProjectItem.spdata">
+      <SharePointProjectItemId>{ae67c3b4-77e7-4214-9f42-4677161620f3}</SharePointProjectItemId>
+    </None>
+    <None Include="Features\Feature2\Feature2.feature">
+      <FeatureId>{3fa70c89-95cb-47b1-aeaf-75b52577a92b}</FeatureId>
     </None>
     <None Include="packages.config" />
     <None Include="Pages\SharePointProjectItem.spdata">
