--- a/DSP/EventosApp/packages.config
+++ b/DSP/EventosApp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AngularJS.Animate" version="1.2.0" targetFramework="net45" />
   <package id="AngularJS.Cookies" version="1.2.10" targetFramework="net45" />
   <package id="AngularJS.Core" version="1.2.10" targetFramework="net45" />
   <package id="AngularJS.Resource" version="1.2.10" targetFramework="net45" />
